[package]
name = "reuse"
version = "0.1.0"
authors = ["Arnaud Lefebvre <a.lefebvre@outlook.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net2 = "0.2"
bytes = "0.5"
yamux = "0.4"
futures = "0.3"
tokio = { version = "0.2", features = ["tcp", "rt-threaded", "macros"] }
tokio-util = { version = "0.3", features = ["compat"] }
futures-util = "0.3"
log = "0.4"
pretty_env_logger = "0.4"